// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`returns raw schema column information > rawColumns 1`] = `
[
  {
    "dataType": "integer",
    "defaultValue": undefined,
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": true,
    "maxLen": undefined,
    "name": "id",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "text",
    "defaultValue": undefined,
    "isArray": false,
    "isEnum": false,
    "isNullable": false,
    "isSerial": false,
    "maxLen": undefined,
    "name": "name",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "text",
    "defaultValue": undefined,
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "maxLen": undefined,
    "name": "email",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "text",
    "defaultValue": "'active'",
    "enumValues": [
      "active",
      "inactive",
      "banned",
    ],
    "isArray": false,
    "isEnum": true,
    "isNullable": true,
    "isSerial": false,
    "maxLen": undefined,
    "name": "status",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "json",
    "defaultValue": undefined,
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "maxLen": undefined,
    "name": "profile",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "text",
    "defaultValue": "datetime('now')",
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "maxLen": undefined,
    "name": "created_at",
    "tableName": "users",
    "tableType": "table",
  },
]
`;

exports[`returns schema models > userTable 1`] = `
{
  "columns": [
    {
      "dataType": "integer",
      "defaultValue": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": true,
      "isWritable": false,
      "isWriteOptional": true,
      "maxLen": undefined,
      "name": "id",
      "tableName": "users",
      "tableType": "table",
      "zodType": "int",
    },
    {
      "dataType": "text",
      "defaultValue": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": false,
      "isReadOptional": false,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": false,
      "maxLen": undefined,
      "name": "name",
      "tableName": "users",
      "tableType": "table",
      "zodType": "string",
    },
    {
      "dataType": "text",
      "defaultValue": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": undefined,
      "name": "email",
      "tableName": "users",
      "tableType": "table",
      "zodType": "string",
    },
    {
      "dataType": "text",
      "defaultValue": "'active'",
      "enumValues": [
        "active",
        "inactive",
        "banned",
      ],
      "isArray": false,
      "isEnum": true,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": undefined,
      "name": "status",
      "tableName": "users",
      "tableType": "table",
      "zodType": "string",
    },
    {
      "dataType": "json",
      "defaultValue": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": undefined,
      "name": "profile",
      "tableName": "users",
      "tableType": "table",
      "zodType": "json",
    },
    {
      "dataType": "text",
      "defaultValue": "datetime('now')",
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": undefined,
      "name": "created_at",
      "tableName": "users",
      "tableType": "table",
      "zodType": "string",
    },
  ],
  "name": "users",
  "schemaName": undefined,
  "type": "table",
}
`;
